# rubberduck-droid

./: .env.template  .gitignore  README.md  main.py  pyproject.toml  serve.py  test_langchain.py  test_memory.py
.github/: copilot-instructions.md
chat/: config.py  voice_chat.py
droid/: README.md  brains.py  config.py  display.py  mouth_light.py  turnoff_displays.py  voice_chat.py  wake_word_detector.py
droid-web/: README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
droid-web/.github/: copilot-instructions.md
droid-web/src/app/: page.tsx
droid/agent/: __init__.py  cli.py  droid_agent.py  long_term_memory.py
droid/fonts/: README.md
droid/rtclient/: __init__.py
droid/snippets/: head.py  led.py
src/: display.py  requirements.txt  vumeter.py
src/snippets/: speak.py
