[tool.poetry]
name = "rubberduck-droid"
version = "0.1.0"
description = "Desktop speech enable droid assistant. Uses AI to discuss with you and answer your questions."
authors = ["Tommi Laukkanen"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pvporcupine = "^3.0.5"
pillow = "^11.0.0"
adafruit-circuitpython-ssd1306 = "^2.12.18"
aiohttp = "^3.10.10"
azure-core = "^1.31.0"
loguru = "^0.7.2"
pyaudio = "^0.2.14"
pydantic = "^2.9.2"
scipy = "^1.14.1"
python-dotenv = "^1.0.1"
rpi-gpio = { version = "^0.7.1", markers = "sys_platform != 'win32'" }
adafruit-blinka = "^8.49.0"
pvrecorder = "^1.2.3"
azure-cognitiveservices-speech = "^1.43.0"
openai = ">=1.68.2,<2.0.0"
google-search-results = "^2.4.2"
langchain = ">=0.1.0"
langchain-core = ">=0.3.58,<1.0.0"
langchain-openai = ">=0.3.16"
langchain-community = ">=0.0.23"
langmem = "^0.0.25"
langgraph = "^0.4.5"
langserve = {extras = ["all"], version = "^0.3.1"}
fastapi = "^0.115.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
